--- a/assets/scss/layouts/_navigation.scss
+++ b/assets/scss/layouts/_navigation.scss
@@ -122,7 +122,7 @@
 		position: absolute;
 		line-height: 0;
 		top: 50%;
-		transform: translateY(-45%);
+		transform: translateY(-40%);
 		right: 9px;
 
 		// svg {
